silly dark-mode template fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,14 +29,10 @@
 
 </head>
 
-<body class="bg-white text-center d-flex h-100 " data-theme="dark">
-
+<body class="bg-white text-center " data-theme="dark">
   <div class="container d-flex p-3 mx-auto w-100 flex-column">
     <header class="mb-auto">
-      <div class="float-md-start fw-bold fs-5">⚓ AnchorHODL</div>
-      <nav class="nav justify-content-center float-md-end">
-
-        <a class="nav-link" href="https://github.com/unl1k3ly/AnchorHODL#support" target="_blank">🌕 #Lunatic</a>
+      <div class="float-md-start fw-bold fs-5">⚓ AnchorHODL <a class="nav-link" href="https://github.com/unl1k3ly/AnchorHODL#support" target="_blank">🌕  #Lunatic</a></div>
         <div class="nav-link">
 
 <!--          <div class="form-check form-switch">-->
