--- a/templates/index.html
+++ b/templates/index.html
@@ -1,54 +1,32 @@
 <!doctype html>
-<html lang="en" class="h-100">
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ title }}</title>
-        <meta http-equiv="refresh" content="30">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+      <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-dark.min.css') }}" />
 
-  <meta name="description" content="Add a dark-mode theme toggle with a Bootstrap Custom Switch">
 
-  <link rel="icon"
+    <title>{{ title }}</title>
+        <link rel="icon"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2280%22>🌓</text></svg>">
+    <meta http-equiv="refresh" content="20">
+  </head>
+  <body>
+    <div class="container text-center">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="https://github.com/unl1k3ly/AnchorHODL#support">⚓ AnchorHODL <a class="nav-link" href="https://github.com/unl1k3ly/AnchorHODL#support" target="_blank">🌕  #Lunatic</a></a>
+            </div>
+          </nav>
 
-  <meta property="og:site_name" content="GitHub">
-  <meta property="og:image"
-    content="https://repository-images.githubusercontent.com/194995309/38db8f80-9db7-11e9-998f-43f2a26d9e0b">
-  <meta property="og:title" content="dark-mode-switch">
-  <meta property="og:description" content="Add a dark-mode theme toggle with a Bootstrap Custom Switch">
-  <meta property="og:url" content="https://coliff.github.io/dark-mode-switch/">
-  <link rel="author" href="https://christianoliff.com/">
-  <meta name="twitter:creator" content="@christianoliff">
-  <meta name="monetization" content="$ilp.uphold.com/Epqzn3YGr2MB">
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css">
-
-  <link rel="stylesheet" href="{{ url_for('static', filename='dark-mode.css') }}">
-
-</head>
-
-<body class="bg-white text-center " data-theme="dark">
-  <div class="container d-flex p-3 mx-auto w-100 flex-column">
-    <header class="mb-auto">
-      <div class="float-md-start fw-bold fs-5">⚓ AnchorHODL <a class="nav-link" href="https://github.com/unl1k3ly/AnchorHODL#support" target="_blank">🌕  #Lunatic</a></div>
-        <div class="nav-link">
-
-<!--          <div class="form-check form-switch">-->
-<!--            <input type="checkbox" class="form-check-input" id="darkSwitch">-->
-<!--            <label class="custom-control-label" for="darkSwitch">Dark Mode</label>-->
-<!--          </div>-->
-          <script src="{{ url_for('static', filename='dark-mode-switch.min.js') }}"></script>
-
-        </div>
-      </nav>
-    </header>
-
-            <p></p>
-        <div class="card text-white bg-light w-75">
+        <p></p>
+        <div class="card">
             <div class="card-header border-success">
-                <strong>{{ title }} left until repay is triggered ...</strong>
+                <strong>{{ title }}</strong> left until repay is triggered ...
             </div>
             <div class="card-body">
 <!--            <h5 class="card-title">Special title treatment</h5>-->
@@ -62,10 +40,8 @@
             </div>
         </div>
 
-        <div class="card text-white bg-light w-75">
-            <div class="card-header border-success">
-            <strong>TerraSwap Prices and bLuna <-> Luna Diff ...</strong>
-            </div>
+        <div class="card">
+            <div class="card-header border-success">TerraSwap Prices and bLuna <-> Luna Diff ...</div>
             <div class="card-body">
                 <p class="card-text">
                 <ul>
@@ -78,10 +54,8 @@
         </div>
 
 
-        <div class="card text-white bg-light w-75">
-        <div class="card-header border-success">
-            <strong>Last {{ repay_list|length }} repays ...  </strong>
-        </div>
+        <div class="card">
+        <div class="card-header border-success">Last {{ repay_list|length }} repays ...  </div>
             <div class="card-body">
             <p class="card-text">
                 <ul>
@@ -94,8 +68,8 @@
         </div>
 
 
-        <div class="card text-white bg-light w-75">
-            <div class="card-header border-success"><strong>Cron</strong></div>
+        <div class="card">
+            <div class="card-header border-success">Cron</div>
             <div class="card-body">
                 <p class="card-text">
                 <ul>
@@ -108,11 +82,18 @@
         </div>
 
 
-<!--    <footer class="mt-auto">-->
-<!--      <p>#Lunatic</p>-->
-<!--    </footer>-->
+    </div>
 
-  </div>
 
-</body>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
