--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <div class="container text-center">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
               <div class="container-fluid">
-                <a class="navbar-brand" href="https://github.com/unl1k3ly/AnchorHODL#support">⚓ AnchorHODL <a class="nav-link" href="https://github.com/unl1k3ly/AnchorHODL#support" target="_blank">🌕  #Lunatic</a></a>
+                <a class="navbar-brand" href="https://github.com/unl1k3ly/AnchorHODL#support">⚓ AnchorHODL</a> <a class="nav-link" href="https://github.com/unl1k3ly/AnchorHODL#support" target="_blank">🌕  #Lunatic</a>
             </div>
           </nav>
 
