silly dark-mode template fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,18 +69,18 @@
         </div>
 
 
-        <div class="card">
-            <div class="card-header border-success text-success">Cron</div>
-            <div class="card-body">
-                <p class="card-text">
-                <ul class="list-group list-group-flush">
-                {% for line in apscheduler_list: %}
-                 <li class="list-group-item text-white">{{ line }}</li>
-                {% endfor %}
-            </ul>
-                </p>
-            </div>
-        </div>
+<!--        <div class="card">-->
+<!--            <div class="card-header border-success text-success">Cron</div>-->
+<!--            <div class="card-body">-->
+<!--                <p class="card-text">-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                {% for line in apscheduler_list: %}-->
+<!--                 <li class="list-group-item text-white">{{ line }}</li>-->
+<!--                {% endfor %}-->
+<!--            </ul>-->
+<!--                </p>-->
+<!--            </div>-->
+<!--        </div>-->
 
 
     </div>
