silly dark-mode template fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <div class="container text-center">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
               <div class="container-fluid">
-                <a class="navbar-brand" href="https://github.com/unl1k3ly/AnchorHODL#support">⚓ AnchorHODL</a> <a class="nav-link" href="https://github.com/unl1k3ly/AnchorHODL#support" target="_blank">🌕  #LUNATIC</a>
+                <a class="navbar-brand" href=#>⚓ AnchorHODL</a> <a class="nav-link" href="https://github.com/unl1k3ly/AnchorHODL#support" target="_blank">🌕  #LUNATIC</a>
             </div>
           </nav>
 
