removed TerraSwap prices from webview

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,18 +41,18 @@
             </div>
         </div>
 
-        <div class="card">
-            <div class="card-header border-success text-success">TerraSwap Prices and bLuna <-> Luna Diff ...</div>
-            <div class="card-body">
-                <p class="card-text">
-                <ul class="list-group list-group-flush">
-                {% for line in terraswap_prices: %}
-                 <li class="list-group-item text-white">{{ line }}</li>
-                {% endfor %}
-            </ul>
-                </p>
-            </div>
-        </div>
+{#        <div class="card">#}
+{#            <div class="card-header border-success text-success">TerraSwap Prices and bLuna <-> Luna Diff ...</div>#}
+{#            <div class="card-body">#}
+{#                <p class="card-text">#}
+{#                <ul class="list-group list-group-flush">#}
+{#                {% for line in terraswap_prices: %}#}
+{#                 <li class="list-group-item text-white">{{ line }}</li>#}
+{#                {% endfor %}#}
+{#            </ul>#}
+{#                </p>#}
+{#            </div>#}
+{#        </div>#}
 
 
         <div class="card">
